--- a/Valerus/test-output/old/Failed suite [Failed suite [Default suite]]/methods-not-run.html
+++ b/Valerus/test-output/old/Failed suite [Failed suite [Default suite]]/methods-not-run.html
@@ -1,31 +1,46 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testcases.WebPagesElementsTest.ChangeNameExitAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeVisibilityStatusExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeNameAndCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangeNameExitPressSaveUnsavedChangesTest</td></tr>
-<tr><td>testcases.NVRsElementsTest.CheckPropertiesAfterChangePortTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeStatusExitAndSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.RemoveNVRsByButtonTest</td></tr>
+<tr><td>testcases.NVRsElementsTest.CheckPropertiesAfterChangePortTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.DeleteURLExitAndSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.ChangeNameTest</td></tr>
-<tr><td>testcases.ViewsElementsTest.ChangeLayoutAndPressCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRemarksAndCancelTest</td></tr>
+<tr><td>testcases.ViewsTest.AddNewViewWithoutLayoutTest</td></tr>
 <tr><td>testcases.NVRsTest.RemoveNVRsByIconTest</td></tr>
-<tr><td>testcases.NVRsElementsTest.ChangePortPressCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeVisibilityStatusExitAndSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.ViewsTest.DeleteViewByButtonTest</td></tr>
 <tr><td>testcases.NVRsTest.FilterDiscoveredNVRsTest</td></tr>
+<tr><td>testcases.NVRsElementsTest.ChangePortPressCancelTest</td></tr>
 <tr><td>testcases.GroupsHierarchyTest.DeleteResourceByButtonAndCancelRemovingTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeVisibilityStatusExitAndPressCancelTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewWithLayoutExitAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageExitAndCancelTest</td></tr>
 <tr><td>testcases.NVRsTest.AddNVRManuallyAndPressCloseTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.SwitchStorageDefinitionsExitAndPressDontSaveButtonTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeVisibilityStatusExitAndPressDoNotSaveTest</td></tr>
+<tr><td>testcases.NVRsTest.AddNVRAndPressApplyTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.SwitchStorageDefinitionsExitAndPressCancelTest</td></tr>
 <tr><td>testcases.GroupsHierarchyTest.DeleteResourceByButtonAndCheckInMonitoringTest</td></tr>
-<tr><td>testcases.NVRsTest.AddNVRManuallyWithSecuredPortAndSwitchONSecuredTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangeIPAdressPressCancelExitTest</td></tr>
 <tr><td>testcases.NVRsTest.DeleteOneNVRAndCheckPropertiesPanelTest</td></tr>
+<tr><td>testcases.ViewsTest.ChangeVisibilityStatusTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewWithLayoutExitAndSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.ChangeStorageDefinitionsTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.SwitchStorageDefinitionsAndPressCancelTest</td></tr>
 <tr><td>testcases.NVRsTest.SelectNVRandPressCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeURLExitAndSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueAndCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangePortExitPressSaveUnsavedChangesTest</td></tr>
 <tr><td>testcases.NVRsTest.SwitchStorageDefinitionsTest</td></tr>
+<tr><td>testcases.ViewsTest.DeleteViewByIconTest</td></tr>
 <tr><td>testcases.GroupsHierarchyTest.DragResourceToGroupTest</td></tr>
 <tr><td>testcases.NVRsTest.MultipleNVRsAdditingTest</td></tr>
+<tr><td>testcases.ViewsTest.DeleteCameraAndCheckInViewTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeVisibilityStatusExitAndPressSaveTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ClearViewExitAndPressSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.ChangePortToSecuredAndCheckStatusTest</td></tr>
@@ -33,38 +48,65 @@
 <tr><td>testcases.NVRsTest.AddAlreadyUsedNVRManuallyTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeNameAndPressCancelTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeRemarksExitAndPressSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueBySpinnerExitAndCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangeUserNameExitPressDontSaveUnsavedChangesTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRemarksExitAndCancelTest</td></tr>
+<tr><td>testcases.ViewsTest.ViewsFilterTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeURLExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.NVRsElementsTest.ChangeNameExitCancelUnsavedChangesExitCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangeStorageDefinitionsExitCancelUnsavedChangesTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeLayoutExitAndPressCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.CheckPropertiesAfterChangeUserNameTest</td></tr>
+<tr><td>testcases.ViewsTest.ClearViewTest</td></tr>
 <tr><td>testcases.NVRsTest.InputInvalidPasswordInAddNVRManualyTest</td></tr>
 <tr><td>testcases.NVRsTest.SwitchOffStorageDefinitionsTest</td></tr>
+<tr><td>testcases.NVRsTest.DeleteOneNVRClickOnAnotherNVRAndCheckPropertiesPanelTest</td></tr>
 <tr><td>testcases.NVRsTest.DecreasePortInAddNVRManualyWindowTest</td></tr>
+<tr><td>testcases.ViewsTest.ChangeLayoutTest</td></tr>
 <tr><td>testcases.NVRsTest.ChangePortToValidAndCheckStatusTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeNameExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueBySpinnerExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeVisibilityStatusAndCancelTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewWithLayoutExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.SortingNVRsByVersionTest</td></tr>
 <tr><td>testcases.NVRsTest.SortingDiscoveredNVRsTest</td></tr>
+<tr><td>testcases.ViewsTest.CancelDeletingViewByButton</td></tr>
 <tr><td>testcases.NVRsTest.SortingNVRsByNameTest</td></tr>
 <tr><td>testcases.NVRsTest.InputInvalidUserNameInAddNVRManualyTest</td></tr>
 <tr><td>testcases.NVRsTest.AddNVRManuallyAndSwitchONSecuredTest</td></tr>
+<tr><td>testcases.ViewsTest.CancelRemovingViewByIconTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeRemarksExitAndPressDoNotSaveTest</td></tr>
+<tr><td>testcases.ViewsTest.ClearViewAndDragResourceTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ClearViewExitAndPressDoNotSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.ChangeUserNameToValidAndCheckStatusTest</td></tr>
 <tr><td>testcases.NVRsTest.AddNVRManuallyAndPressApplyTest</td></tr>
+<tr><td>testcases.ViewsTest.ResourceFilterTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeURLExitAndCancelTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewWithoutLayoutAndExitAndCancelTest</td></tr>
 <tr><td>testcases.GroupsHierarchyTest.ResourcesFilterTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangeNameExitPressDontSaveUnsavedChangesTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangePortExitCancelUnsavedChangesTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeStatusAndCancelTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeNameExitAndPressSaveTest</td></tr>
-<tr><td>testcases.NVRsTest.AddNVRManuallyCheckStatusTest</td></tr>
+<tr><td>testcases.ViewsTest.ChangeRemarksTest</td></tr>
+<tr><td>testcases.NVRsTest.ChangePasswordToInvalidAndCheckStatusTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewExitAndPressCancelTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeLayoutExitAndPressDontSaveTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangePortExitPressDontSaveUnsavedChangesTest</td></tr>
+<tr><td>testcases.NVRsElementsTest.ChangeUserNameExitCancelUnsavedChangesTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ClearViewExitAndPressCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueBySpinnerAndSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRemarksExitAndSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueExitAndSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueExitAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageInputURLExitAndSaveTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeRemarksExitAndPressCancelTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewExitAndPressSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeVisibilityStatusExitAndCancelTest</td></tr>
 <tr><td>testcases.NVRsTest.InputInvalidIPAdressInAddNVRManualyTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewAndPressCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.DeleteURLExitAndCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangeNamePressCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.ChangeUserNameAndPressCancel</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeNameExitAndPressCancelTest</td></tr>
@@ -82,17 +124,33 @@
 <tr><td>testcases.NVRsElementsTest.ChangeIPAdressExitPressDontSaveUnsavedChangesTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewWithoutLayoutAndExitAndSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.AddNVRWithSecuredPortAndSwitchOffSecuredStatusTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeNameExitAndSaveTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeLayoutExitAndPressSaveTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.AddNewViewExitAndPressDoNotSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.DeleteURLAndCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.CheckPropertiesAfterChangePasswordTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageInputURLExitAndCancelTest</td></tr>
 <tr><td>testcases.GroupsHierarchyTest.DragGroupToGroupTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueBySpinnerAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.DeleteURLExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.FilterNVRsTest</td></tr>
 <tr><td>testcases.GroupsHierarchyTest.DeleteGroupAndCheckInMonitoringTest</td></tr>
+<tr><td>testcases.NVRsTest.ChangePortAndCheckStatusTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.NVRsTest.ChangeUserNameToInvalidAndCheckStatusTest</td></tr>
+<tr><td>testcases.ViewsElementsTest.AddNewViewWithoutLayoutAndExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.ChangePortBySpinnersTest</td></tr>
 <tr><td>testcases.GroupsHierarchyTest.RenameGroupAndClickCancelIconTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeStatusExitAndDoNoTSaveTest</td></tr>
+<tr><td>testcases.ViewsTest.ChangeNameTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeStatusExitAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageInputURLAndCancelTest</td></tr>
 <tr><td>testcases.NVRsTest.SwitchOffStorageDefinitionsAndPressNoTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ChangeVisibilityStatusAndPressCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRemarksExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.CheckPropertiesAfterChangeIPAdressTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeURLAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageInputURLExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.CheckPropertiesAfterChangeNameTest</td></tr>
 <tr><td>testcases.ViewsElementsTest.ClearViewAndPressCancelTest</td></tr>
 <tr><td>testcases.NVRsElementsTest.SwitchStorageDefinitionsExitAndPressSaveButtonTest</td></tr>
