--- a/Valerus/test-output/old/Default suite/methods-not-run.html
+++ b/Valerus/test-output/old/Default suite/methods-not-run.html
@@ -2,6 +2,7 @@
 <tr><td>testcases.MonitoringView.CancelDeletingViewByButton</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeNameExitAndCancelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeVisibilityStatusExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.NVRsElementsTest.ChangeIPAdressExitPressSaveUnsavedChangesTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeNameAndCancelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeStatusExitAndSaveTest</td></tr>
 <tr><td>testcases.MonitoringView.CancelRemovingViewByIconTest</td></tr>
@@ -19,12 +20,12 @@
 <tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeStatusAndCancelTest</td></tr>
 <tr><td>testcases.MonitoringView.DeleteViewByButtonTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.AddNewWebPageExitAndCancelTest</td></tr>
-<tr><td>testcases.WebPagesElementsTest.ChangeRemarksExitAndSaveTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueBySpinnerAndSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRemarksExitAndSaveTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueExitAndSaveTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueExitAndCancelTest</td></tr>
-<tr><td>testcases.WebPagesElementsTest.AddNewWebPageAndCancelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.AddNewWebPageInputURLExitAndSaveTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageAndCancelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeVisibilityStatusExitAndCancelTest</td></tr>
 <tr><td>testcases.NVRsTest.DeleteOneNVRAndCheckPropertiesPanelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.DeleteURLExitAndCancelTest</td></tr>
@@ -35,8 +36,9 @@
 <tr><td>testcases.NVRsTest.IncreasePortInAddNVRManualyWindowTest</td></tr>
 <tr><td>testcases.MonitoringView.DeleteViewByIconTest</td></tr>
 <tr><td>testcases.ViewsTest.DeleteCameraAndCheckInViewTest</td></tr>
-<tr><td>testcases.NVRsTest.AddNVRWithSecuredPortAndSwitchOffSecuredStatusTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.AddNewWebPageExitAndSaveTest</td></tr>
 <tr><td>testcases.NVRsTest.ChangePortToSecuredAndCheckStatusTest</td></tr>
+<tr><td>testcases.NVRsTest.AddNVRWithSecuredPortAndSwitchOffSecuredStatusTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeNameExitAndSaveTest</td></tr>
 <tr><td>testcases.MonitoringView.DeleteCameraAndCheckInViewTest</td></tr>
 <tr><td>testcases.MonitoringView.changelayoutTest</td></tr>
@@ -59,10 +61,11 @@
 <tr><td>testcases.NVRsTest.ChangePortToValidAndCheckStatusTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeStatusExitAndCancelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeNameExitAndDoNotSaveTest</td></tr>
-<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueBySpinnerExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeVisibilityStatusAndCancelTest</td></tr>
+<tr><td>testcases.WebPagesElementsTest.ChangeRefreshTimeValueBySpinnerExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.AddNewWebPageInputURLAndCancelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeRemarksExitAndDoNotSaveTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.ChangeURLAndCancelTest</td></tr>
 <tr><td>testcases.WebPagesElementsTest.AddNewWebPageInputURLExitAndDoNotSaveTest</td></tr>
+<tr><td>testcases.NVRsElementsTest.IncreasePortAndPressCancel</td></tr>
 </table>
